--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <title>Saiful exclusive website</title>
 </head>
 <body>
-    <h1>Hi dear I'm using github and create e-commerce web site</h1>
+    <h1><span class="bluer">Hi dear I'm using github and create e-commerce web site</span></h1>
 </body>
 </html>
