--- a/index.html
+++ b/index.html
@@ -5,8 +5,48 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Saiful exclusive website</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1><span class="bluer">Hi dear I'm using github and create e-commerce web site</span></h1>
+        <section class="top-banner">
+            <div class="half-width">
+                <h1> Most welcome to </h1> 
+            <h1><span class="blue-highlight">Saiful</span> website</h1>
+            <h2>world class <span class="red-highlight">incredible</span>  web developer</h2>
+                <p>Hi, I'm a professional web developer and trustworthy person as well. I can create various kinds of website like e-commerce, social, banking, business etc. I can also solve any critical matter are faced in developing any website or a company. All work are very heartily do and make satisfy to any clients. </p>
+                <a class="link-button" target="_blank" href="https://www.facebook.com/aurbiee.scief">VISIT ME</a>
+            </div>
+            <div class="half-width">
+                <img src="images/saif.png" alt="">
+                
+            </div>
+        </section>
+        <section class="background-image">
+            <div class="half-width">
+                <img src="images/saif2.png" alt="">
+
+            </div>
+            <div class="half-width">
+                <h1> Dream Exposes</h1>
+                <h2>To be a big bug web developer</h2>
+                <p>I want to be a world top class web developer. I will have a professional licence and can visit all over the world. By hard working interested all knower and w3school as well and also google. Everything will have very easy if can spend more time. Insha Allah I can cover up all my troubles and never give up from this occupation</p>
+                <a class="link-fashion" target="_blank" href="https://www.facebook.com/">DOWNLOAD RESUME</a>
+            </div>
+        </section>
+        <section class="background-style">
+            <h1 class="style-one">Experiences</h1>
+            <div id="Full-stack" class="half-width single-experience">
+                <h1>Full stack web developer</h1>
+            <h2 class="orange-highlight">2021-present | High class web dev</h2>
+            <p>I've created various kinds of website like e-commerce, business, personal etc. and all other company. All work can do manually and self-directionally.</p>
+        </div>
+        <div id="Fokira-web" class="half-width single-experience ">
+            <h1>Fokira web developer</h1>
+            <h2 class="orange-highlight">2020-2021 | Totall web developer programmer</h2>
+            <p>I've taken long term course of complete web development programme from Jhankar Mahbub. I know html, css, java, pythons and php etc. I can create very attractive and interesting web site which you will definately satisfy to see it.</p>
+        </div>
+        </section>
+        <footer>@copywrite by M.Saiful Islam</footer>
+
 </body>
 </html>
